# ROOT-AESOP

DataFromEmails/: ADC_Calib_V3_A.xlsx
Markdowns/: Notes.md
Safety/: Radiation Awareness Training-Non-Users-2021- signed-pichardo.docx  Radiation Awareness Training-Non-Users-2021.docx
projEnv/: pyproject.toml
